implementando alguns videos na page de treinos B

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                 <div>
                     <h2>Treino B</h2>
-                    <a class="img-treinos" href=""
+                    <a class="img-treinos" href="./pages/Treino B/treinoB.html"
                         ><img
                             src="./img/Treino B.png"
                             alt="homem treinando Peito"
