--- a/pages/Treino A/treinoA.html
+++ b/pages/Treino A/treinoA.html
@@ -19,6 +19,7 @@
                 height="330"
                 frameborder="0"
                 allowfullscreen="true"
+                autoplay="0"
             ></iframe>
             <div class="checkbox">
                 <input type="checkbox" id="concluido" />
@@ -55,7 +56,6 @@
                 <label for="concluido">Atividade Concluida</label>
             </div>
         </div>
-        ~
 
         <div class="exercicios">
             <h2>REMADA UNILATERAL COM HALTER</h2>
