Alterações na page de treino B, e inserindo os exercicios da page do treino D

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                 <div>
                     <h2>Treino D</h2>
-                    <a class="img-treinos" href=""
+                    <a class="img-treinos" href="./pages/Treino D/treinoD.html"
                         ><img
                             src="./img/Treino D.png"
                             alt="homem treinando Ombros"
