--- a/pages/Treino B/treinoB.html
+++ b/pages/Treino B/treinoB.html
@@ -84,43 +84,16 @@
         </div>
 
         <div class="exercicios">
-            <h2>ROSCA DIRETA COM BARRA</h2>
+            <h2>Triceps Com Barra Polia Drop Set 1x</h2>
             <iframe
-                src="https://wavecloud.co.in/player/embed/Nzg1ODYy"
-                width="330"
-                height="330"
+                width="370"
+                height="315"
+                src="https://www.youtube.com/embed/6nhZnAMQsog?si=s5Szm8k1--GWedyB"
+                title="YouTube video player"
                 frameborder="0"
-                allowfullscreen="true"
-            ></iframe>
-            <div class="checkbox">
-                <input type="checkbox" id="concluido" />
-                <label for="concluido">Atividade Concluida</label>
-            </div>
-        </div>
-
-        <div class="exercicios">
-            <h2>ROSCA MARTELO SIMULTANEA</h2>
-            <iframe
-                src="https://wavecloud.co.in/player/embed/Nzg1ODU4"
-                width="330"
-                height="330"
-                frameborder="0"
-                allowfullscreen="true"
-            ></iframe>
-            <div class="checkbox">
-                <input type="checkbox" id="concluido" />
-                <label for="concluido">Atividade Concluida</label>
-            </div>
-        </div>
-
-        <div class="exercicios">
-            <h2>ABDOMINAL PRANCHA</h2>
-            <iframe
-                src="https://wavecloud.co.in/player/embed/Nzg1ODU5"
-                width="330"
-                height="330"
-                frameborder="0"
-                allowfullscreen="true"
+                allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
             ></iframe>
             <div class="checkbox">
                 <input type="checkbox" id="concluido" />
