alterando page de treino A, e colocando exercicios do treino C

--- a/pages/Treino A/treinoA.html
+++ b/pages/Treino A/treinoA.html
@@ -12,14 +12,16 @@
     </head>
     <body>
         <div class="exercicios">
-            <h2>REMADA CURVADA COM BARRA</h2>
+            <h2>Puxada Alta</h2>
             <iframe
-                src="https://wavecloud.co.in/player/embed/Nzg1ODYz"
-                width="330"
-                height="330"
+                width="370"
+                height="315"
+                src="https://www.youtube.com/embed/7bT3sa7cxlw?si=IjKEa_3MHWrAJpdX"
+                title="YouTube video player"
                 frameborder="0"
-                allowfullscreen="true"
-                autoplay="0"
+                allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
             ></iframe>
             <div class="checkbox">
                 <input type="checkbox" id="concluido" />
@@ -28,24 +30,27 @@
         </div>
 
         <div class="exercicios">
-            <h2>REMADA CURVADA PRONADA COM BARRA</h2>
+            <h2>Remada Curvada Pronada Com Barra</h2>
+            <iframe
+                width="370"
+                height="315"
+                src="https://www.youtube.com/embed/cMQpvkZGQrE?si=AVwXxdRmjqIeSuTY"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+            ></iframe>
+            <div class="checkbox">
+                <input type="checkbox" id="concluido" />
+                <label for="concluido">Atividade Concluida</label>
+            </div>
+        </div>
+
+        <div class="exercicios">
+            <h2>Remada Baixa Fechada DROP SET</h2>
             <iframe
                 src="https://wavecloud.co.in/player/embed/Nzg1ODY0"
-                width="330"
-                height="330"
-                frameborder="0"
-                allowfullscreen="true"
-            ></iframe>
-            <div class="checkbox">
-                <input type="checkbox" id="concluido" />
-                <label for="concluido">Atividade Concluida</label>
-            </div>
-        </div>
-
-        <div class="exercicios">
-            <h2>REMADA BAIXA FECHADA DROP SET</h2>
-            <iframe
-                src="https://wavecloud.co.in/player/embed/Nzg1ODYx"
                 width="330"
                 height="330"
                 frameborder="0"
