--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <div>
                     <h2>Treino C</h2>
-                    <a class="img-treinos" href=""
+                    <a class="img-treinos" href="./pages/Treino C/treinoC.html"
                         ><img
                             src="./img/Treino C.png"
                             alt="homem treinando pernas"
